	dummy.
	(w3m-view-this-url-1): Show a progress message.
	(w3m-copy-buffer): Simplify the code to call `w3m-popup-buffer'.
	(w3m-alive-p): Add an optional arg `visible' (see docs); use
	inlining `w3m-list-buffers'.
	(w3m): Simplify the code using `w3m-popup-buffer'; specify the
	optional arg to `w3m-alive-p'; protect against the case of no url.

	* w3m-util.el (w3m-list-buffers): Make it into a normal function;
	don't call itself recursively.

2003-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/mew-shimbun.el (static-if): New macro providing only
	when compiling.
	(mew-shimbun-visit-folder): Replace `w3m-static-if' with
	`static-if'.
	(function-max-args): New macro providing only when compiling with
	Emacs; make it work also with symbol function aliases.
	(mew-shimbun-goto-folder): Replace `w3m-function-max-args' with
	`function-max-args'.
	(mew-shimbun-retrieve-article): Replace `w3m-static-if' with
	`static-if'.
	(mew-shimbun-scan-message): Ditto.

	* w3m-util.el (w3m-function-max-args): Move to mew-shimbun.el.

	* w3m.el (w3m-popup-buffer): New function (it still needs to
	improved in order for the `w3m' function to use).
	(w3m-view-this-url-1): Specify the value of
	`w3m-view-this-url-new-session-in-background' to the 3rd arg of
	`w3m-copy-buffer'; don't pop up a window or a frame there.
	(w3m-copy-buffer): Change the meaning of the 3rd arg (see docs);
	don't pop up a window or a frame if it is non-nil, otherwise call
	`w3m-popup-buffer'.
	(w3m-goto-url): Change the name of the 8th arg to `interactive-p';
	don't pop up a window or a frame unless this function is called
	interactively, otherwise call `w3m-popup-buffer'.
	(w3m-goto-url-new-session): Specify nil to the 3rd arg of
	`w3m-copy-buffer'.
	(w3m-select-buffer-saved-window-config): Abolish.
	(w3m-select-buffer): Revert the 2003-11-05 change; delete other
	windows except for the current emacs-w3m window or create a new
	emacs-w3m buffer when it is called initially.